--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="product">Product</string>
     <string name="transaction">Transaction</string>
+    <string name="phone">Phone</string>
+    <string name="address">Address</string>
+    <string name="note">Note</string>
+    <string name="save">Save</string>
 </resources>
