--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,5 @@
     <string name="address">Address</string>
     <string name="note">Note</string>
     <string name="save">Save</string>
-    <string name="custom_receipt">Receipt Template</string>
+    <string name="receipt_setting">Printer and Receipt</string>
 </resources>
