--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="note">Note</string>
     <string name="save">Save</string>
     <string name="receipt_setting">Printer and Receipt</string>
+    <string name="cancel">cancel</string>
+    <string name="ok">ok</string>
 </resources>
